// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> should render correctly with default props 1`] = `
<svg
  height="50"
  stroke="#EF8822"
  viewBox="0 -2 40 50"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <g
      strokeWidth="4"
      transform="translate(1 1)"
    >
      <circle
        cx="18"
        cy="18"
        r="18"
        strokeOpacity=".1"
      />
      <path
        d="M36 18c0-9.94-8.06-18-18-18"
        transform="rotate(147.172 18 18)"
      >
        <animateTransform
          attributeName="transform"
          dur="1s"
          from="0 18 18"
          repeatCount="indefinite"
          to="360 18 18"
          type="rotate"
        />
      </path>
    </g>
  </g>
</svg>
`;

exports[`<Spinner /> should render correctly with given props 1`] = `
<svg
  height="10px"
  stroke="#ddd"
  viewBox="0 -2 40 50"
  width="10px"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <g
      strokeWidth="4"
      transform="translate(1 1)"
    >
      <circle
        cx="18"
        cy="18"
        r="18"
        strokeOpacity=".1"
      />
      <path
        d="M36 18c0-9.94-8.06-18-18-18"
        transform="rotate(147.172 18 18)"
      >
        <animateTransform
          attributeName="transform"
          dur="1s"
          from="0 18 18"
          repeatCount="indefinite"
          to="360 18 18"
          type="rotate"
        />
      </path>
    </g>
  </g>
</svg>
`;
